--- a/test/fixtures/advertisements.yml
+++ b/test/fixtures/advertisements.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  cents: 1
-  currency: MyString
+  cents: 10000
+  currency: AUD
 
 two:
-  cents: 1
-  currency: MyString
+  cents: 10000
+  currency: AUD
