--- a/test/fixtures/claims.yml
+++ b/test/fixtures/claims.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  cents: 1
+  cents: 500
   advertisement: one
 
 two:
-  cents: 1
-  advertisement: two
+  cents: 500
+  advertisement: one
